@@ -1,29 +1,0 @@
-#! /usr/bin/php -q
-<?php
-
-// *****************************************
-// Standard initialization of a CLI module:
-// *****************************************
-
-	// Defining circumstances for CLI mode:
-define('TYPO3_cliMode', TRUE);
-
-	// Defining PATH_thisScript here: Must be the ABSOLUTE path of this script in the right context:
-	// This will work as long as the script is called by it's absolute path!
-define('PATH_thisScript',$_ENV['_']?$_ENV['_']:$_SERVER['_']);
-
-	// Include configuration file:
-require(dirname(PATH_thisScript).'/conf.php');
-
-	// Include init file:
-require(dirname(PATH_thisScript).'/'.$BACK_PATH.'init.php');
-
-
-
-# HERE you run your application!
-require_once(PATH_typo3.'mod/user/ws/class.wslib.php');
-
-$autopubObj = t3lib_div::makeInstance('wslib');
-$autopubObj->CLI_main();
-
-?>
